--- a/views/home.html
+++ b/views/home.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saori Kido</title>
+    <title>Caballeros del zodiaco</title>
 </head>
 <body>
-    <img src="/img/saori.jpg" height="200" alt="">
+    <img src="img/saintseiya.png" height="150" alt="">
+   
 </body>
+
 </html>
