Agrego rutas en los archivos html para poder acceder entre ellos

--- a/views/hyoga.html
+++ b/views/hyoga.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyoga de Cisne</title>
 </head>
-<body>
+<body> 
+    <h1>Hyoga de Cisne</h1>
     <img src="/img/hyoga.jpg" height="200" alt="">
+    <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
     
 </body>
 </html>
