--- a/views/ikki.html
+++ b/views/ikki.html
@@ -7,6 +7,19 @@
     <title>Ikki de Fenix</title>
 </head>
 <body>
+    <h1>Ikki de Fenix</h1>
     <img src="/img/ikki.png" width=250 alt="Imagen de ikki">
+    <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
 </body>
 </html>
