--- a/views/home.html
+++ b/views/home.html
@@ -7,8 +7,20 @@
     <title>Caballeros del zodiaco</title>
 </head>
 <body>
+    <h1>Los Caballeros del zodiaco</h1>
     <img src="img/saintseiya.png" height="150" alt="">
-   
+   <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
 </body>
 
 </html>
