--- a/views/saori.html
+++ b/views/saori.html
@@ -7,6 +7,19 @@
     <title>Saori Kido</title>
 </head>
 <body>
+    <h1>Saori Kido</h1>
     <img src="/img/saori.jpg" height="200" alt="">
+    <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
 </body>
 </html>
