--- a/views/shiryu.html
+++ b/views/shiryu.html
@@ -7,7 +7,20 @@
     <title>Shiryu de Dragon</title>
 </head>
 <body>
+    <h1>Shiryu de Dragon</h1>
     <img src="/img/shiryu.jpg" height="200" alt="">
+    <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
     
 </body>
 </html>
