--- a/views/shun.html
+++ b/views/shun.html
@@ -7,6 +7,19 @@
     <title>Shun de Andromeda</title>
 </head>
 <body>
+    <h1>Shau de Dragon</h1>
     <img src="/img/shun.jpg" height="250" alt="">
+    <nav
+      ><ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/seiya">seiya</a></li>
+          <li><a href="/ikki">ikki</a></li>
+          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/shiryu">Shiryu</a></li>
+          <li><a href="/shun">Shun</a></li>
+          <li><a href="/saori">Saori</a></li>
+
+      </ul>
+   </nav>
 </body>
 </html>
