arreglo del nombre Shun

--- a/views/shun.html
+++ b/views/shun.html
@@ -7,7 +7,7 @@
     <title>Shun de Andromeda</title>
 </head>
 <body>
-    <h1>Shau de Dragon</h1>
+    <h1>Shun de Dragon</h1>
     <img src="/img/shun.jpg" height="250" alt="">
     <nav
       ><ul>
