arreglo en los nombres de ruta de html

--- a/views/shun.html
+++ b/views/shun.html
@@ -7,14 +7,14 @@
     <title>Shun de Andromeda</title>
 </head>
 <body>
-    <h1>Shun de Dragon</h1>
+    <h1>Shun de Andromeda</h1>
     <img src="/img/shun.jpg" height="250" alt="">
     <nav
       ><ul>
-          <li><a href="/">home</a></li>
-          <li><a href="/seiya">seiya</a></li>
-          <li><a href="/ikki">ikki</a></li>
-          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/seiya">Seiya</a></li>
+          <li><a href="/ikki">Ikki</a></li>
+          <li><a href="/hyoga">Hyoga</a></li>
           <li><a href="/shiryu">Shiryu</a></li>
           <li><a href="/shun">Shun</a></li>
           <li><a href="/saori">Saori</a></li>
