--- a/views/ikki.html
+++ b/views/ikki.html
@@ -11,10 +11,10 @@
     <img src="/img/ikki.png" width=250 alt="Imagen de ikki">
     <nav
       ><ul>
-          <li><a href="/">home</a></li>
-          <li><a href="/seiya">seiya</a></li>
-          <li><a href="/ikki">ikki</a></li>
-          <li><a href="/hyoga">hyoga</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/seiya">Seiya</a></li>
+          <li><a href="/ikki">Ikki</a></li>
+          <li><a href="/hyoga">Hyoga</a></li>
           <li><a href="/shiryu">Shiryu</a></li>
           <li><a href="/shun">Shun</a></li>
           <li><a href="/saori">Saori</a></li>
